
SUBDIRS =               \
    aes8051             \
    aesarm              \
    arm2arm             \
    armsfu              \
    avr-interrupt       \
    avr-timer-spi       \
    block8051           \
    blockarm            \
    cordicfsl           \
    cyclecount          \
    euclid              \
    fsl2                \
    fslinterface        \
    gfmul               \
    hello51             \
    helloarm            \
    ramprobe            \
    ssidehsk            \
    test-avr


#    armsystemc // Requires systemc + simit

#    armsfu  // Requires patched arm compiler

#    diblaze  / Requires picoasm (xilinx)
#    pblaze  / Requires picoasm (xilinx)


#all:
#    cd ./arm2arm;             make ; cd .
#    cd ./hello51;          make ; cd .
#    cd ./gfmul;            make ; cd .
#    cd ./helloarm;         make ; cd .
#    cd ./aesarm;           make ; cd .
#    cd ./cyclecount;       make ; cd .
#    cd ./euclid;           make ; cd .
#    cd ./ssidehsk;         make ; cd .
#    cd ./aes8051;           make ; cd .
#    cd ./diblaze;           make ; cd .
#    cd ./euclid;           make ; cd .
#    cd ./pblaze;           make ; cd .
#    cd ./ramprobe;           make ; cd .
#    cd ./block8051;        make ; cd .
#    cd ./armsfu;           make ; cd .
#    cd ./blockarm;         make ; cd .
#    cd ./fslinterface;        make ; cd .
#    cd ./fsl2;                make ; cd .
#    cd ./xilinxfsl_single;    make ; cd .
#    cd ./xilinxipiffifo;      make ; cd .
#    cd ./xilinxipiffifo_gcd;  make ; cd .
#    cd ./xilinxipifreg_gcd;   make ; cd .
#    cd ./xilinxipifmem_gcd;   make ; cd .
#    cd ./xilinxipifreg_sub64; make ; cd .
#    cd ./cordicfsl;          make ; cd .
#    cd ./test_avr;          make ; cd .
#    cd ./avr_Interrupt;      make ; cd .
#    cd ./avr_Timer_SPI;      make ; cd .

sim:
	make -C ./arm2arm               sim
	make -C ./hello51               sim
	make -C ./gfmul                 sim
	make -C ./helloarm              sim
	make -C ./aesarm                sim
	make -C ./cyclecount            sim
	make -C ./euclid                sim
	make -C ./ssidehsk              sim
	make -C ./aes8051               sim
	make -C ./diblaze               sim
	make -C ./euclid                sim
	make -C ./pblaze                sim
	make -C ./ramprobe              sim
	make -C ./block8051             sim
	make -C ./armsfu                sim
	make -C ./blockarm              sim
	make -C ./fslinterface          sim
	make -C ./fsl2                  sim
	make -C ./xilinxfsl_single      sim
	make -C ./xilinxipiffifo        sim
	make -C ./xilinxipiffifo_gcd    sim
	make -C ./xilinxipifreg_gcd     sim
	make -C ./xilinxipifmem_gcd     sim
	make -C ./xilinxipifreg_sub64   sim
	make -C ./cordicfsl             sim
	make -C ./test_avr              sim
	make -C ./avr_Interrupt         sim
	make -C ./avr_Timer_SPI         sim
