# $Id: Makefile,v 1.1.1.1 2005/07/14 17:32:45 schaum Exp $

SUBDIRS =       \
    counter1    \
    counter2    \
    counter3    \
    euclid

sim:
	make -C counter1    sim
	make -C counter2    sim
	make -C counter3    sim
	make -C euclid      sim
#	make -C avrora1     sim
#	make -C avrora2     sim
